minor alignment fixes

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.scss
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.scss
@@ -8,7 +8,7 @@
 
   .mat-list-item {
     height: max-content;
-
+    padding-top: .75em;
   }
 }
 
